

Changes since 4.0-alpha1
------------------------

 - [COLLECTIONS-481] No collision detection/resolution was performed when calling "CompositeSet#addComposited(...)"
                     with more than one Set as argument. Also changed the the method with an array argument to use
                     a varargs parameter. Thanks to Hollis Waite.
 - [COLLECTIONS-468] Renamed CompliantBag to CollectionBag.
 - [COLLECTIONS-475] Fixed conversion of timeout parameters in "PassiveExpiringMap".


Removed classes
---------------

 o [COLLECTIONS-458] Removed unused class "AbstractUntypedCollectionDecorator<E, D>"
 o [COLLECTIONS-432] Removed "Buffer" interface and all its implementations and related classes.
                     Replaced by "java.util.Queue", see also section [New classes]
                     
   - PriorityBuffer: use either java.util.PriorityQueue or java.util.concurrent.PriorityBlockingQueue
   - SynchronizedBuffer: use the corresponding *BlockingQueue classes in java.util.concurrent
   - BoundedBuffer: use either ArrayBlockingBuffer(capacity) or LinkedBlockingBuffer(capacity) in java.util.concurrent
   - UnboundedFifoBuffer: use either java.util.LinkedList or java.util.concurrent.LinkedBlockingBuffer
                     
 o [COLLECTIONS-351] Removed features now supported by the JDK
 
   - FastArrayList: use java.util.concurrent.CopyOnWriteArrayList
   - FastHashMap: use java.util.concurrent.ConcurrentHashMap, but beware of null keys and values
   - FastTreeSet: no direct replacement, use ConcurrentHashMap or a synchronized TreeMap
   - IdentityMap: use java.util.IdentityHashMap
   - ExtendedProperties: use commons-configuration
   - Synchronized[List,Set,SortedSet]: use java.util.Collections.synchronized*()
   - Typed* decorators: use generics for type safety, or java.util.Collections.checked*()
   - [List,Set,Map]Utils.EMPTY_*: use the corresponding fields in java.util.Collections
 