@@ -16,6 +16,8 @@
  */
 package org.apache.commons.collections4.bidimap;
 
+import java.util.Set;
+
 import org.apache.commons.collections4.BidiMap;
 import org.apache.commons.collections4.MapIterator;
 import org.apache.commons.collections4.map.AbstractMapDecorator;
@@ -74,6 +76,10 @@ public abstract class AbstractBidiMapDecorator<K, V>
 
     public BidiMap<V, K> inverseBidiMap() {
         return decorated().inverseBidiMap();
+    }
+
+    public Set<V> values() {
+        return decorated().values();
     }
 
 }
