@@ -16,7 +16,6 @@
  */
 package org.apache.commons.collections4.bidimap;
 
-import java.util.Collection;
 import java.util.Map;
 import java.util.Set;
 import java.util.SortedMap;
@@ -25,7 +24,6 @@ import org.apache.commons.collections4.set.UnmodifiableSet;
 import org.apache.commons.collections4.OrderedMapIterator;
 import org.apache.commons.collections4.SortedBidiMap;
 import org.apache.commons.collections4.Unmodifiable;
-import org.apache.commons.collections4.collection.UnmodifiableCollection;
 import org.apache.commons.collections4.iterators.UnmodifiableOrderedMapIterator;
 import org.apache.commons.collections4.map.UnmodifiableEntrySet;
 import org.apache.commons.collections4.map.UnmodifiableSortedMap;
@@ -108,9 +106,9 @@ public final class UnmodifiableSortedBidiMap<K, V>
     }
 
     @Override
-    public Collection<V> values() {
-        final Collection<V> coll = super.values();
-        return UnmodifiableCollection.unmodifiableCollection(coll);
+    public Set<V> values() {
+        final Set<V> set = super.values();
+        return UnmodifiableSet.unmodifiableSet(set);
     }
 
     //-----------------------------------------------------------------------
